# RecoilEngine-MacOS

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt
cont/LuaUI/: widgets.lua
cont/base/springcontent/shaders/GLSL/: GroundDecalsVertProg.glsl
cont/examples/Widgets/: RandomIconWidget.lua
doc/: building-macos.md  run-macos.sh
doc/site/content/docs/guides/getting-started/: first-steps-with-the-engine.md
rts/Game/Players/: TeamController.h
rts/Game/UI/: MiniMap.cpp  MiniMap.h
rts/Lua/: LuaContextData.h  LuaHandle.cpp  LuaHandle.h  LuaHandleSynced.cpp  LuaIntro.cpp  LuaLibs.cpp  LuaMemPool.cpp  LuaMenu.cpp  LuaOpenGL.cpp  LuaSyncedCtrl.cpp  LuaSyncedRead.cpp  LuaUI.cpp  LuaUnsyncedCtrl.cpp  LuaUnsyncedCtrl.h  LuaUnsyncedRead.cpp  LuaUnsyncedRead.h  LuaUtils.h  LuaVAOImpl.cpp  LuaVBOImpl.cpp
rts/Map/SMF/: SMFRenderState.cpp
rts/Rendering/: GlobalRendering.cpp  ShadowHandler.cpp  VerticalSync.cpp
rts/Rendering/Env/Decals/: GroundDecalHandler.cpp
rts/Rendering/GL/: RenderBuffers.h
rts/Rendering/Units/: UnitDrawer.h  UnitDrawerData.cpp  UnitDrawerData.h
rts/Rml/Backends/: RmlUi_Renderer_GL3_Recoil.cpp
rts/Sim/: CMakeLists.txt
rts/Sim/Misc/: ModInfo.cpp  Resource.h
rts/Sim/MoveTypes/: HoverAirMoveType.cpp
rts/Sim/Path/QTPFS/: Node.h  NodeLayer.h  PathSearch.cpp  PathSearch.h  PathThreads.h
rts/Sim/Units/: Unit.cpp  Unit.h
rts/Sim/Units/Scripts/: UnitScript.cpp
rts/Sim/Units/UnitTypes/: Builder.cpp
rts/Sim/Weapons/: Weapon.cpp
rts/System/: CMakeLists.txt  ChunkedArray.h  EventClient.h  EventHandler.h  MemPoolTypes.h  SpringApp.cpp  SpringMath.inl  TimeUtil.cpp  TypeToStr.h
rts/System/FileSystem/Archives/: CMakeLists.txt
rts/System/Log/: TracySink.cpp
rts/System/Misc/: SpringTime.h
rts/System/Platform/: ThreadAffinityGuard.cpp  ThreadAffinityGuard.h
rts/System/Platform/Mac/: CpuTopology.cpp  MacEGL.cpp  MacEGL.h
rts/builds/dedicated/: CMakeLists.txt
rts/builds/headless/: CMakeLists.txt
rts/builds/legacy/: CMakeLists.txt
rts/lib/: CMakeLists.txt
rts/lib/assimp/include/assimp/: matrix3x3.inl  matrix4x4.inl  quaternion.inl  vector2.inl  vector3.inl
rts/lib/glad/: CMakeLists.txt
rts/lib/smmalloc/: smmalloc.h  smmalloc_generic.cpp
test/: CMakeLists.txt
test/engine/System/: testClampRad.cpp
test/engine/System/FileSystem/: TestFileSystem.cpp
tools/unitsync/: CMakeLists.txt
